Bengala/ANTLR generated/tigerParser.cs
// $ANTLR 3.1.1 C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g 2009-04-02 14:05:17

	using Bengala.AST;
	using Bengala.AST.SemanticsUtils;
	using System.Collections.Generic;


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;

using IDictionary	= System.Collections.IDictionary;
using Hashtable 	= System.Collections.Hashtable;

public partial class tigerParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"END", 
		"WHILE", 
		"DO", 
		"FOR", 
		"IF", 
		"THEN", 
		"ELSE", 
		"FUNCTION", 
		"ARRAY", 
		"OF", 
		"LET", 
		"IN", 
		"TYPE", 
		"NIL", 
		"TO", 
		"BREAK", 
		"VAR", 
		"INT", 
		"STRING", 
		"WS", 
		"CHAR", 
		"DIGIT", 
		"ID", 
		"PLUS", 
		"MINUS", 
		"ASTER", 
		"SLASH", 
		"POW", 
		"MOD", 
		"LPAREN", 
		"RPAREN", 
		"LKEY", 
		"RKEY", 
		"LBRACKET", 
		"RBRACKET", 
		"EQUAL", 
		"DISTINC", 
		"GT", 
		"LT", 
		"GE", 
		"LE", 
		"NOT", 
		"AND", 
		"OR", 
		"ASSIGN", 
		"DOT", 
		"COLON", 
		"COMMA", 
		"SEMICOLON", 
		"QUOTE", 
		"CHAR_STRING", 
		"INTCONST", 
		"STRINGCOMPONENTS", 
		"STRINGCONST", 
		"LINECOMENTS", 
		"MULTILINECOMENTS"
    };

    public const int FUNCTION = 11;
    public const int CHAR_STRING = 54;
    public const int LT = 42;
    public const int WHILE = 5;
    public const int MULTILINECOMENTS = 59;
    public const int INTCONST = 55;
    public const int MOD = 32;
    public const int CHAR = 24;
    public const int DO = 6;
    public const int FOR = 7;
    public const int NOT = 45;
    public const int AND = 46;
    public const int ID = 26;
    public const int EOF = -1;
    public const int BREAK = 19;
    public const int LPAREN = 33;
    public const int TYPE = 16;
    public const int IF = 8;
    public const int LBRACKET = 37;
    public const int STRINGCOMPONENTS = 56;
    public const int QUOTE = 53;
    public const int RPAREN = 34;
    public const int SLASH = 30;
    public const int IN = 15;
    public const int THEN = 9;
    public const int POW = 31;
    public const int DISTINC = 40;
    public const int COMMA = 51;
    public const int EQUAL = 39;
    public const int RKEY = 36;
    public const int STRINGCONST = 57;
    public const int PLUS = 27;
    public const int VAR = 20;
    public const int DIGIT = 25;
    public const int RBRACKET = 38;
    public const int DOT = 49;
    public const int ARRAY = 12;
    public const int GE = 43;
    public const int LINECOMENTS = 58;
    public const int TO = 18;
    public const int ELSE = 10;
    public const int ASTER = 29;
    public const int SEMICOLON = 52;
    public const int INT = 21;
    public const int MINUS = 28;
    public const int LKEY = 35;
    public const int OF = 13;
    public const int COLON = 50;
    public const int WS = 23;
    public const int NIL = 17;
    public const int OR = 47;
    public const int ASSIGN = 48;
    public const int GT = 41;
    public const int END = 4;
    public const int LE = 44;
    public const int LET = 14;
    public const int STRING = 22;

    // delegates
    // delegators



        public tigerParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public tigerParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
        }
        

    override public string[] TokenNames {
		get { return tigerParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g"; }
    }



    // $ANTLR start "program"
    // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:109:1: program returns [ExpressionAST res] : e= exp EOF ;
    public ExpressionAST program() // throws RecognitionException [1]
    {   
        ExpressionAST res = default(ExpressionAST);

        ExpressionAST e = default(ExpressionAST);


        try 
    	{
            // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:109:44: (e= exp EOF )
            // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:109:46: e= exp EOF
            {
            	PushFollow(FOLLOW_exp_in_program1145);
            	e = exp();
            	state.followingStackPointer--;
            	if (state.failed) return res;
            	if ( state.backtracking == 0 ) 
            	{
            	  res = e;
            	}
            	Match(input,EOF,FOLLOW_EOF_in_program1149); if (state.failed) return res;

            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return res;
    }
    // $ANTLR end "program"


    // $ANTLR start "exp"
    // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:112:1: exp returns [ExpressionAST res] : (ifE= ifExp | forE= forExp | let= letExp | ( lvalue ASSIGN )=>lv= lvalue s= ASSIGN initExp= exp | ( ID LBRACKET ( exp )? RBRACKET OF )=>id= ID LBRACKET sizeExp= exp RBRACKET OF initExp= exp | whileE= whileInstr | breakE= breakInstr | record= recordInstance | e= expOrAnd );
    public ExpressionAST exp() // throws RecognitionException [1]
    {   
        ExpressionAST res = default(ExpressionAST);

        IToken s = null;
        IToken id = null;
        ExpressionAST ifE = default(ExpressionAST);

        ExpressionAST forE = default(ExpressionAST);

        ExpressionAST let = default(ExpressionAST);

        LValueAST lv = default(LValueAST);

        ExpressionAST initExp = default(ExpressionAST);

        ExpressionAST sizeExp = default(ExpressionAST);

        ExpressionAST whileE = default(ExpressionAST);

        ExpressionAST breakE = default(ExpressionAST);

        ExpressionAST record = default(ExpressionAST);

        ExpressionAST e = default(ExpressionAST);


        try 
    	{
            // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:112:42: (ifE= ifExp | forE= forExp | let= letExp | ( lvalue ASSIGN )=>lv= lvalue s= ASSIGN initExp= exp | ( ID LBRACKET ( exp )? RBRACKET OF )=>id= ID LBRACKET sizeExp= exp RBRACKET OF initExp= exp | whileE= whileInstr | breakE= breakInstr | record= recordInstance | e= expOrAnd )
            int alt1 = 9;
            alt1 = dfa1.Predict(input);
            switch (alt1) 
            {
                case 1 :
                    // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:112:44: ifE= ifExp
                    {
                    	PushFollow(FOLLOW_ifExp_in_exp1175);
                    	ifE = ifExp();
                    	state.followingStackPointer--;
                    	if (state.failed) return res;
                    	if ( state.backtracking == 0 ) 
                    	{
                    	  res = ifE;
                    	}

                    }
                    break;
                case 2 :
                    // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:113:9: forE= forExp
                    {
                    	PushFollow(FOLLOW_forExp_in_exp1191);
                    	forE = forExp();
                    	state.followingStackPointer--;
                    	if (state.failed) return res;
                    	if ( state.backtracking == 0 ) 
                    	{
                    	  res = forE;
                    	}

                    }
                    break;
                case 3 :
                    // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:114:9: let= letExp
                    {
                    	PushFollow(FOLLOW_letExp_in_exp1206);
                    	let = letExp();
                    	state.followingStackPointer--;
                    	if (state.failed) return res;
                    	if ( state.backtracking == 0 ) 
                    	{
                    	  res = let;
                    	}

                    }
                    break;
                case 4 :
                    // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:115:9: ( lvalue ASSIGN )=>lv= lvalue s= ASSIGN initExp= exp
                    {
                    	PushFollow(FOLLOW_lvalue_in_exp1227);
                    	lv = lvalue();
                    	state.followingStackPointer--;
                    	if (state.failed) return res;
                    	s=(IToken)Match(input,ASSIGN,FOLLOW_ASSIGN_in_exp1233); if (state.failed) return res;
                    	PushFollow(FOLLOW_exp_in_exp1239);
                    	initExp = exp();
                    	state.followingStackPointer--;
                    	if (state.failed) return res;
                    	if ( state.backtracking == 0 ) 
                    	{
                    	  res = new AssignExpressionAST(lv,initExp, s.Line, s.CharPositionInLine);
                    	}

                    }
                    break;
                case 5 :
                    // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:116:9: ( ID LBRACKET ( exp )? RBRACKET OF )=>id= ID LBRACKET sizeExp= exp RBRACKET OF initExp= exp
                    {
                    	id=(IToken)Match(input,ID,FOLLOW_ID_in_exp1271); if (state.failed) return res;
                    	Match(input,LBRACKET,FOLLOW_LBRACKET_in_exp1273); if (state.failed) return res;
                    	PushFollow(FOLLOW_exp_in_exp1280);
                    	sizeExp = exp();
                    	state.followingStackPointer--;
                    	if (state.failed) return res;
                    	Match(input,RBRACKET,FOLLOW_RBRACKET_in_exp1282); if (state.failed) return res;
                    	Match(input,OF,FOLLOW_OF_in_exp1284); if (state.failed) return res;
                    	PushFollow(FOLLOW_exp_in_exp1289);
                    	initExp = exp();
                    	state.followingStackPointer--;
                    	if (state.failed) return res;
                    	if ( state.backtracking == 0 ) 
                    	{
                    	  res = new ArrayInstatiationAST(id.Text,sizeExp,initExp, id.Line, id.CharPositionInLine);
                    	}

                    }
                    break;
                case 6 :
                    // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:117:9: whileE= whileInstr
                    {
                    	PushFollow(FOLLOW_whileInstr_in_exp1306);
                    	whileE = whileInstr();
                    	state.followingStackPointer--;
                    	if (state.failed) return res;
                    	if ( state.backtracking == 0 ) 
                    	{
                    	  res = whileE;
                    	}

                    }
                    break;
                case 7 :
                    // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:118:9: breakE= breakInstr
                    {
                    	PushFollow(FOLLOW_breakInstr_in_exp1322);
                    	breakE = breakInstr();
                    	state.followingStackPointer--;
                    	if (state.failed) return res;
                    	if ( state.backtracking == 0 ) 
                    	{
                    	  res = breakE;
                    	}

                    }
                    break;
                case 8 :
                    // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:119:9: record= recordInstance
                    {
                    	PushFollow(FOLLOW_recordInstance_in_exp1338);
                    	record = recordInstance();
                    	state.followingStackPointer--;
                    	if (state.failed) return res;
                    	if ( state.backtracking == 0 ) 
                    	{
                    	  res =record;
                    	}

                    }
                    break;
                case 9 :
                    // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:120:9: e= expOrAnd
                    {
                    	PushFollow(FOLLOW_expOrAnd_in_exp1353);
                    	e = expOrAnd();
                    	state.followingStackPointer--;
                    	if (state.failed) return res;
                    	if ( state.backtracking == 0 ) 
                    	{
                    	  res = e;
                    	}

                    }
                    break;

            }
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return res;
    }
    // $ANTLR end "exp"


    // $ANTLR start "expOrAnd"
    // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:124:1: expOrAnd returns [ExpressionAST res] : e1= expCOMP ( (s= AND | s= OR ) e2= expCOMP )* ;
    public ExpressionAST expOrAnd() // throws RecognitionException [1]
    {   
        ExpressionAST res = default(ExpressionAST);

        IToken s = null;
        ExpressionAST e1 = default(ExpressionAST);

        ExpressionAST e2 = default(ExpressionAST);


        try 
    	{
            // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:124:40: (e1= expCOMP ( (s= AND | s= OR ) e2= expCOMP )* )
            // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:124:42: e1= expCOMP ( (s= AND | s= OR ) e2= expCOMP )*
            {
            	PushFollow(FOLLOW_expCOMP_in_expOrAnd1398);
            	e1 = expCOMP();
            	state.followingStackPointer--;
            	if (state.failed) return res;
            	if ( state.backtracking == 0 ) 
            	{
            	  res= e1;
            	}
            	// C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:124:66: ( (s= AND | s= OR ) e2= expCOMP )*
            	do 
            	{
            	    int alt3 = 2;
            	    alt3 = dfa3.Predict(input);
            	    switch (alt3) 
            		{
            			case 1 :
            			    // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:125:15: (s= AND | s= OR ) e2= expCOMP
            			    {
            			    	// C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:125:15: (s= AND | s= OR )
            			    	int alt2 = 2;
            			    	int LA2_0 = input.LA(1);

            			    	if ( (LA2_0 == AND) )
            			    	{
            			    	    alt2 = 1;
            			    	}
            			    	else if ( (LA2_0 == OR) )
            			    	{
            			    	    alt2 = 2;
            			    	}
            			    	else 
            			    	{
            			    	    if ( state.backtracking > 0 ) {state.failed = true; return res;}
            			    	    NoViableAltException nvae_d2s0 =
            			    	        new NoViableAltException("", 2, 0, input);

            			    	    throw nvae_d2s0;
            			    	}
            			    	switch (alt2) 
            			    	{
            			    	    case 1 :
            			    	        // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:125:16: s= AND
            			    	        {
            			    	        	s=(IToken)Match(input,AND,FOLLOW_AND_in_expOrAnd1424); if (state.failed) return res;

            			    	        }
            			    	        break;
            			    	    case 2 :
            			    	        // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:126:22: s= OR
            			    	        {
            			    	        	s=(IToken)Match(input,OR,FOLLOW_OR_in_expOrAnd1451); if (state.failed) return res;

            			    	        }
            			    	        break;

            			    	}

            			    	PushFollow(FOLLOW_expCOMP_in_expOrAnd1462);
            			    	e2 = expCOMP();
            			    	state.followingStackPointer--;
            			    	if (state.failed) return res;
            			    	if ( state.backtracking == 0 ) 
            			    	{
            			    	    res = LogicalExpressionAST.GetLogicalExpressionAST(res,e2,s.Text, s.Line, s.CharPositionInLine);
            			    	}

            			    }
            			    break;

            			default:
            			    goto loop3;
            	    }
            	} while (true);

            	loop3:
            		;	// Stops C# compiler whining that label 'loop3' has no statements


            }

        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
        }
        finally 
    	{
        }
        return res;
    }
    // $ANTLR end "expOrAnd"


    // $ANTLR start "expCOMP"
    // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:129:1: expCOMP returns [ExpressionAST res] : e1= expEQ ( (s= GT | s= LT | s= GE | s= LE ) e2= expEQ )? ;
    public ExpressionAST expCOMP() // throws RecognitionException [1]
    {   
        ExpressionAST res = default(ExpressionAST);

        IToken s = null;
        ExpressionAST e1 = default(ExpressionAST);

        ExpressionAST e2 = default(ExpressionAST);


        try 
    	{
            // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:129:40: (e1= expEQ ( (s= GT | s= LT | s= GE | s= LE ) e2= expEQ )? )
            // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:129:42: e1= expEQ ( (s= GT | s= LT | s= GE | s= LE ) e2= expEQ )?
            {
            	PushFollow(FOLLOW_expEQ_in_expCOMP1543);
            	e1 = expEQ();
            	state.followingStackPointer--;
            	if (state.failed) return res;
            	if ( state.backtracking == 0 ) 
            	{
            	  res = e1;
            	}
            	// C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:129:66: ( (s= GT | s= LT | s= GE | s= LE ) e2= expEQ )?
            	int alt5 = 2;
            	alt5 = dfa5.Predict(input);
            	switch (alt5) 
            	{
            	    case 1 :
            	        // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:130:77: (s= GT | s= LT | s= GE | s= LE ) e2= expEQ
            	        {
            	        	// C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:130:77: (s= GT | s= LT | s= GE | s= LE )
            	        	int alt4 = 4;
            	        	switch ( input.LA(1) ) 
            	        	{
            	        	case GT:
            	        		{
            	        	    alt4 = 1;
            	        	    }
            	        	    break;
            	        	case LT:
            	        		{
            	        	    alt4 = 2;
            	        	    }
            	        	    break;
            	        	case GE:
            	        		{
            	        	    alt4 = 3;
            	        	    }
            	        	    break;
            	        	case LE:
            	        		{
            	        	    alt4 = 4;
            	        	    }
            	        	    break;
            	        		default:
            	        		    if ( state.backtracking > 0 ) {state.failed = true; return res;}
            	        		    NoViableAltException nvae_d4s0 =
            	        		        new NoViableAltException("", 4, 0, input);

            	        		    throw nvae_d4s0;
            	        	}

            	        	switch (alt4) 
            	        	{
            	        	    case 1 :
            	        	        // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:130:78: s= GT
            	        	        {
            	        	        	s=(IToken)Match(input,GT,FOLLOW_GT_in_expCOMP1632); if (state.failed) return res;

            	        	        }
            	        	        break;
            	        	    case 2 :
            	        	        // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:131:15: s= LT
            	        	        {
            	        	        	s=(IToken)Match(input,LT,FOLLOW_LT_in_expCOMP1652); if (state.failed) return res;

            	        	        }
            	        	        break;
            	        	    case 3 :
            	        	        // C:\\Users\\Y & A\\Documents\\Visual Studio 2008\\Projects\\Tiger Compiler (codename Bengala) - Release 1\\Bengala\\tiger.g:132:15: s= GE
            	        	        {
            	        	        	s=(IToken)Match(input,GE,FOLLOW_GE_in_expCOMP1683); if (state.failed) return res;
